# phoenix-cxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindSDL2.cmake
include/app/: app.hpp
include/error/: initError.hpp
include/graphics/: graphics.hpp
include/libapp/: app.h
include/sdl/: display.hpp  initUtil.hpp  initVideo.hpp  renderer.hpp  sdlUtil.hpp  texture.hpp  window.hpp
include/util/: util.hpp
include/world/: world.hpp  world2d.hpp
src/: CMakeLists.txt  main.cpp  main.cxx
src/lib/: CMakeLists.txt
src/lib/App/: CMakeLists.txt  app.cxx  appMain.cxx
src/lib/Error/: CMakeLists.txt  initError.cxx
src/lib/Graphics/: CMakeLists.txt  graphics.cxx
src/lib/SDL/: CMakeLists.txt  sdlUtil.cxx
src/lib/SDL/Display/: CMakeLists.txt  display.cxx
src/lib/SDL/InitUtil/: CMakeLists.txt  initUtil.cxx
src/lib/SDL/InitVideo/: CMakeLists.txt  initVideo.cxx
src/lib/SDL/Renderer/: CMakeLists.txt  renderer.cxx
src/lib/SDL/Texture/: CMakeLists.txt  texture.cxx
src/lib/SDL/Window/: CMakeLists.txt  window.cxx
src/lib/Util/: CMakeLists.txt  initUtil.cxx
src/lib/World/: CMakeLists.txt  world.cxx
